k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-testing
  labels:
    app: just-testing
spec:
  selector:
    app: just-testing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
